[package]
name = "opengdtf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.2"
roxmltree = "0.14.1"
thiserror = "1.0.31"
uuid = { version = "1.1.2", features = ["v4"]}
zip = "0.6.2"

[dev-dependencies]
regex = "1.6.0"