[package]
name = "opengdtf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.2"
roxmltree = "0.17.0"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0.31"
uuid = { version = "1.1.2", features = ["v4"]}
zip = "0.6.2"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
derive_more = "0.99.17"
getset = "0.1.2"
itertools = "0.10.5"

[dev-dependencies]
regex = "1.6.0"
example_files = { path = "tests/example_files"}
pretty_assertions = "1.3.0"

[workspace]
members = ["benches/comparison_against_gdtf_parser"]
default-members = [".", "tests/example_files", "benches/comparison_against_gdtf_parser"]
