[package]
name = "example_files"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.16.0"
walkdir =  "2.3.2"
toml = "0.5.10"
serde = { version = "1.0", features = ["derive"] }
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
zip = "0.6.2"
chrono = { version = "0.4.23", features = ["serde"] }
opengdtf ={ path = "../.." }